--- a/style.css
+++ b/style.css
@@ -17,14 +17,56 @@
     text-align: center;
 }
 
-#minha-foto {
-    width: 100px;
-    margin-left: 345px;
+.minha-foto {
+    width: 110px;
+    margin-left: 310px;
     position: relative;
-    top: -80px;
-    position: relative;
+    top: -85px;
+    border-radius: 50%;
+    box-shadow: 0 0 15px #00c6ff
+}
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.skill {
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    text-align: center;
+    gap: 8px;
+}
+
+.skill img {
+    width: 24px;
+    height: 24px;
+}
+
+#my-skills {
+    font-family: poppins;
+    font-size: 35px;
+    text-align: left;
+    margin: 30px 0 10px -65px;
+    color: #00BFFF; 
+}
+    
+
+.languages {
+  font-size: 20px; 
+  margin-left: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  
+
+}
+
+.name-languages {
+   font-family: Fire Code;
+   margin-left: 10px;
 }
 
 body {
@@ -48,3 +90,9 @@ body {
     padding: 0;
     color: aliceblue;
 }
+
+
+
+
+
+
