--- a/style.css
+++ b/style.css
@@ -92,6 +92,36 @@ body {
     color: aliceblue;
 }
 
+#contato h2 {
+    font-family: poppins;
+    font-size: 35px;
+    text-align: left;
+    margin: 30px 0 10px -70px;
+    color: #b084f9; 
+    text-shadow: 0 0 10px rgba(223, 38, 223, 0.626);
+}
+
+#contato li, a{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: -65;
+    gap: 8px;
+    color: #fff;
+    background: linear-gradient(to right, #8a2be2, #00bfff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+     transition: 0.3s;
+}
+
+#contato img {
+    width: 24px;
+    height: 30px;
+    gap: 10px;
+}
+
+
+
 
 
 
