--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .titulo {
     color: #95a1b1;
     font-family: 'Times New Roman', Times, serif;
@@ -76,8 +77,8 @@ body {
     display: grid;
     place-items: center;
     padding: 2rem 1rem;
-    
 }
+
 
 #apresentacao {
     font-family: monospace;
@@ -106,6 +107,7 @@ body {
     color: #fff;
     background: linear-gradient(to right, #8a2be2, #00bfff);
     -webkit-background-clip: text;
+    background-clip: border-box;
     -webkit-text-fill-color: transparent;
     text-decoration: none;
      transition: 0.3s;
