--- a/style.css
+++ b/style.css
@@ -1,135 +1,85 @@
-
-.titulo {
-    color: #95a1b1;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 50px;
-    position: relative;
-    align-items: center;
-    text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
 }
 
-
-.meu-nome {
-    color: #919eaf75;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    margin-top: -10px;
-    position: relative;
-    text-align: center;
-}
-
-.minha-foto {
-    width: 110px;
-    margin-left: 310px;
-    position: relative;
-    top: -85px;
-    border-radius: 50%;
-    box-shadow: 0 0 15px #00c6ff;
-}
-
-
-
-.skills {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.skill {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 8px;
-}
-
-.skill img {
-    width: 24px;
-    height: 24px;
-}
-
-#my-skills {
-    font-family: poppins;
-    font-size: 35px;
-    text-align: left;
-    color: #00BFFF; 
-}
-    
-
-.languages {
-  font-size: 20px; 
-  margin-left: 500px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
-  
-
-}
-
-.name-languages {
-   font-family: Fire Code;
-   margin-left: 10px;
+html {
+  scroll-padding-top: 80px;
 }
 
 body {
-    background: url("https://raw.githubusercontent.com/maykbrito/my-public-files/main/nlw-19/bg.jpg") no-repeat;
-    color: #e1e1e6;
-    display: grid;
-    place-items: center;
-    padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+
+  background-image: linear-gradient(90deg, #18181b, #18181b, #18181b);
 }
 
+header {
+  display: flex;
 
-#apresentacao {
-    font-family: monospace;
-    text-align: center;
-    font-size: 20px;
-    margin-top: -40px;
-    align-items: center;
-    display: grid;  
-    padding: 0;
-    color: aliceblue;
+  justify-content: center;
+  align-items: center;
+  
+  position: sticky;
+  top: 0;
+  left: 0;
+
+  z-index: 100;
+  gap: 2rem;
+
+  height: 92px;
+  padding: 0 2rem;
+
+  background-color: #18181b;
+  border-bottom: 2px solid purple;
 }
 
-#contato h2 {
-    font-family: poppins;
-    font-size: 35px;
-    text-align: left;
-    color: #00BFFF; 
+header nav {
+  display: flex;
+  gap: 1.5rem;
 }
 
-#contato li, a{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: -65;
-    gap: 8px;
-    color: #fff;
-    background: linear-gradient(to right, #8a2be2, #00bfff);
-    -webkit-background-clip: text;
-    background-clip: border-box;
-    -webkit-text-fill-color: transparent;
-    text-decoration: none;
-     transition: 0.3s;
+header nav a {
+  display: flex;
+
+  padding: 0.2rem 0.5rem;
+  gap: 0.4em;
+
+  font-size: 1.25rem;
+  color: white;
+  font-weight: 500;
+  text-decoration: none;
+
+  border: 2px solid gray;
+  border-radius: 0.5rem;
+
+  transition: all 0.3s ease;
 }
 
-#contato img {
-    width: 24px;
-    height: 30px;
-    gap: 10px;
+header nav a:hover {
+  color: purple;
+  border-color: purple;
+  box-sizing: border-box;
+  box-shadow: 0 8px 16px rgba(128, 0, 128, 0.2) ;
 }
 
-#contato  a:hover {
-    transform: scale(1.1);
-    filter: brightness(1.2);
-    
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  gap: 2rem;
+  height: calc(120vh - 92px);
 }
 
-
-
-
-
-
-
-
-
+.pessoa {
+  margin-top: 2rem;
+  min-height: 50px;
+  height: 80%;
+  max-height: 642px;
+  border-radius: 0.5rem;
+  border: 1px solid purple;
+  box-shadow: 0 8px 16px rgba(128, 0, 128, 0.2) ;
+}
