--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
   list-style: none;
 }
 
-html {
-  scroll-padding-top: 80px;
-}
+
 
 body {
   display: flex;
@@ -82,4 +80,28 @@ main {
   border-radius: 0.5rem;
   border: 1px solid purple;
   box-shadow: 0 8px 16px rgba(128, 0, 128, 0.2) ;
+}
+
+.habilidades {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  gap: 1.5rem;
+  margin-top: 1rem;
+}
+
+.habilidades li {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.habilidades li img {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  transition: transform 0.3s ease;
 }
