--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  scroll-behavior: smooth;
 }
 
 
@@ -73,6 +74,9 @@ main {
 }
 
 .pessoa {
+  justify-content: center;
+  justify-items: center;
+
   margin-top: 2rem;
   min-height: 50px;
   height: 80%;
@@ -136,4 +140,55 @@ main {
   font-size: 2rem;
   font-weight: 600;
   color: white;
+}
+
+.sobre {
+  max-width: 800px;
+  text-align: center;
+  font-size: 1.2rem;
+  color: #18181b;
+  background-color: white;
+  max-width: 100%;
+  max-height: 100%;
+  border-top: 2px solid purple;
+}
+
+.sobre p {
+  padding: 1.5rem;
+  line-height: 1.6;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.sobre h2 {
+  padding: 1rem;
+  color: purple;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.sobre table th {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: left;
+  padding: 0.5rem 1rem;
+  color: purple;
+
+  float: left;
+
+}
+
+.sobre table td {
+  padding: 0.5rem 1rem;
+  text-align: left;
+  color: black;
+  font-weight: 500;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
+.sobre table {
+  
+  margin: 0 auto 1.5rem auto;
+  border-collapse: collapse;
 }
